tests/paczka1/fuzzy1/34242932.err
Error in line 5: b5V0l2CTn9 S306 48,5
Error in line 23: b5V0l2CTn9 S123 23,7
Error in line 24: JHPBo9aEIFK S123 81,8
Error in line 26: MlQ4A44tRr A560 11,8
